force-app/main/default/objects/Venta_Mostrador_Detalle__c/Venta_Mostrador_Detalle__c.object-meta.xml
<CustomObject>
    <description>Detalle ventas mostrador</description>
    <label>Ventas Mostrador Detalle</label>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>Venta Mostrador Detalle Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Ventas Mostrador Detalles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>