force-app/main/default/objects/Venta_Mostrador_Detalle__c/fields/Almacen__c.field-meta.xml
<CustomField>
    <fullName>Almacen__c</fullName>
    <label>Almacen</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>POCH_Centro__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>POCH_Almacen</valueSetName>
    </valueSet>
</CustomField>