force-app/main/default/objects/Venta_Mostrador_Detalle__c/fields/Cte_Consigna__c.field-meta.xml
<CustomField>
    <fullName>Cte_Consigna__c</fullName>
    <label>Cte-Consigna</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>