force-app/main/default/objects/Venta_Mostrador_Detalle__c/fields/Descripcion__c.field-meta.xml
<CustomField>
    <fullName>Descripcion__c</fullName>
    <label>Descripción</label>
    <length>48</length>
    <type>Text</type>
</CustomField>