force-app/main/default/objects/Venta_Mostrador_Detalle__c/fields/Descto__c.field-meta.xml
<CustomField>
    <fullName>Descto__c</fullName>
    <description>Descuento por posición</description>
    <inlineHelpText>Porcentaje de descuento que se otorga a la posición</inlineHelpText>
    <label>% Descto</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>