force-app/main/default/objects/Venta_Mostrador_Detalle__c/fields/Descuento_Monto__c.field-meta.xml
<CustomField>
    <fullName>Descuento_Monto__c</fullName>
    <label>Descuento Monto</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>