force-app/main/default/objects/Venta_Mostrador_Detalle__c/fields/Margen__c.field-meta.xml
<CustomField>
    <fullName>Margen__c</fullName>
    <label>Margen</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>