force-app/main/default/objects/Venta_Mostrador_Detalle__c/fields/Material__c.field-meta.xml
<CustomField>
    <fullName>Material__c</fullName>
    <description>Codigo del material a vender</description>
    <inlineHelpText>Codigo del material a vender</inlineHelpText>
    <label>Material</label>
    <length>10</length>
    <type>Text</type>
</CustomField>