force-app/main/default/objects/Venta_Mostrador_Detalle__c/fields/POCH_Cantidad__c.field-meta.xml
<CustomField>
    <fullName>POCH_Cantidad__c</fullName>
    <label>Cantidad en Ordenes</label>
    <precision>15</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>