force-app/main/default/objects/Venta_Mostrador_Detalle__c/fields/POCH_Centro__c.field-meta.xml
<CustomField>
    <fullName>POCH_Centro__c</fullName>
    <label>Centro</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Oficina_de_Venta__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>POCH_CentroSuministrador</valueSetName>
    </valueSet>
</CustomField>