force-app/main/default/objects/Venta_Mostrador_Detalle__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Ventas Mostrador Detalles</relationshipLabel>
    <relationshipName>Ventas_Mostrador_Detalles</relationshipName>
    <type>Lookup</type>
</CustomField>