force-app/main/default/objects/Venta_Mostrador_Detalle__c/fields/Stock_Consignacion__c.field-meta.xml
<CustomField>
    <fullName>Stock_Consignacion__c</fullName>
    <label>Stock Consignacion</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>