force-app/main/default/objects/Venta_Mostrador_Detalle__c/fields/Sucursal__c.field-meta.xml
<CustomField>
    <fullName>Sucursal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sucursal</label>
    <referenceTo>POCH_Sucursal__c</referenceTo>
    <relationshipLabel>Ventas Mostrador Detalles</relationshipLabel>
    <relationshipName>Ventas_Mostrador_Detalles</relationshipName>
    <type>Lookup</type>
</CustomField>