force-app/main/default/objects/Venta_Mostrador_Detalle__c/fields/UnidadMedida__c.field-meta.xml
<CustomField>
    <fullName>UnidadMedida__c</fullName>
    <label>UM Venta</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Poch_Unidadmedida</valueSetName>
    </valueSet>
</CustomField>