force-app/main/default/objects/Venta_Mostrador_Detalle__c/fields/Valor_neto__c.field-meta.xml
<CustomField>
    <fullName>Valor_neto__c</fullName>
    <label>Valor neto</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>