force-app/main/default/objects/Venta_Mostrador_Detalle__c/fields/Ventas_Mostrador__c.field-meta.xml
<CustomField>
    <fullName>Ventas_Mostrador__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ventas Mostrador</label>
    <referenceTo>Ventas_Mostrador__c</referenceTo>
    <relationshipName>Ventas_Mostrador_Detalles</relationshipName>
    <type>Lookup</type>
</CustomField>